--- a/package.json
+++ b/package.json
@@ -3,10 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "cookie-session": "^2.0.0",
+    "dotenv": "^16.0.1",
     "express": "^4.16.1",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.8.0",
     "mongoose": "^6.4.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
