--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-session": "^2.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.16.1",
+    "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.8.0",
