--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "private": true,
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.js"
+    ]
   },
   "dependencies": {
     "cookie-session": "^2.0.0",
@@ -17,6 +24,9 @@
     "mongoose": "^6.4.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "jest": "^28.1.3",
+    "mongodb-memory-server": "^8.7.2",
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4"
   }
 }
