--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "server",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "Speer backend assessment",
   "private": true,
+  "author": "Auguest Gao",
+  "main": "index.js",
+  "license": "ISC",
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
+  },
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
